[package]
name = "markdown_publish_client"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "markdown_publish_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12.1", features = ["blocking"]}

[dev-dependencies]
