[package]
name = "markdown_publish_server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "markdown_publish_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pulldown-cmark = "0.10.0"
rocket = "0.5.0"
config = "0.14.0"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = "0.12.1"
